--- a/pve.html
+++ b/pve.html
@@ -92,7 +92,7 @@
             background-color: rgb(71 85 105);
         }
     </style>
-  <script type="module" crossorigin src="/NoobTacoAddons/assets/footer-loader-CUDicD4r.js"></script>
+  <script type="module" crossorigin src="/NoobTacoAddons/assets/footer-loader-w5Wvp5Sq.js"></script>
 </head>
 <body class="bg-slate-50 text-slate-700 dark:bg-slate-900 dark:text-slate-300 transition-colors duration-200">
 
@@ -193,7 +193,7 @@
 
                         <div class="addon-card p-6 flex flex-col lg:col-span-2">
                             <h3 class="text-xl font-semibold text-slate-800 dark:text-slate-100">DBM Event Announcement</h3>
-                            <p class="mt-2 text-slate-600 dark:text-slate-300 flex-grow">A simple but very effective addon that announces in chat when an important ability or mechanic is targeting you. This helps your group react accordingly. It is compatible with a BigWigs setup, so you can use it even if you don't use DBM as your main boss mod.</p>
+                            <p class="mt-2 text-slate-600 dark:text-slate-300 flex-grow">A simple but very effective addon that announces in chat when an important ability or mechanic is targeting you. This helps your group react accordingly. <strong class="font-bold text-blue-600 dark:text-blue-400">It is compatible with a BigWigs setup</strong>, so you can use it even if you don't use DBM as your main boss mod.</p>
                             <a href="https://www.curseforge.com/wow/addons/dbm-event-announcement" target="_blank" rel="noopener noreferrer" class="mt-4 inline-block text-center bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors duration-200">Download ➔</a>
                         </div>
                         
