--- a/noobtacoui.html
+++ b/noobtacoui.html
@@ -125,7 +125,6 @@
                 <p class="text-sm text-slate-500 dark:text-slate-400 mt-1">Complete UI Setup</p>
                 <nav class="mt-8 space-y-2">
                     <a href="#overview" class="nav-link flex items-center px-4 py-2 text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-700 rounded-lg transition-colors duration-200">Overview</a>
-                    <a href="#installation" class="nav-link flex items-center px-4 py-2 text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-700 rounded-lg transition-colors duration-200">Installation</a>
                     <a href="#noobtacoui-media" class="nav-link flex items-center px-4 py-2 text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-700 rounded-lg transition-colors duration-200">NoobTacoUI Media</a>
                     <a href="#edit-mode-input-strings" class="nav-link flex items-center px-4 py-2 text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-700 rounded-lg transition-colors duration-200">Edit Mode Input Strings</a>
                     <a href="#noobtacoui" class="nav-link flex items-center px-4 py-2 text-slate-600 dark:text-slate-300 hover:bg-slate-100 dark:hover:bg-slate-700 rounded-lg transition-colors duration-200">NoobTacoUI</a>
@@ -141,14 +140,11 @@
                     </p>
                 </section>
 
-                <section id="installation" class="mb-16">
-                    <h2 class="text-3xl font-bold text-slate-800 dark:text-slate-100 border-b border-slate-200 dark:border-slate-700 pb-4">Installation</h2>
-                    <p class="mt-4 text-slate-600 dark:text-slate-300">Installation instructions and requirements will be provided here.</p>
-                </section>
-
                 <section id="noobtacoui-media" class="mb-16">
                     <h2 class="text-3xl font-bold text-slate-800 dark:text-slate-100 border-b border-slate-200 dark:border-slate-700 pb-4">NoobTacoUI Media</h2>
                     <p class="mt-4 text-slate-600 dark:text-slate-300">This media addon provides SharedMedia assets including custom fonts, audio cues, and background graphics that enhance the visual and auditory experience of the NoobTacoUI setup.</p>
+                    <p class="mt-2 text-slate-500 dark:text-slate-400 text-sm">This addon works seamlessly with the default World of Warcraft interface and does not require ElvUI or any other modifications.</p>
+                    <p class="mt-2 text-slate-600 dark:text-slate-300">For the best experience, use NoobTacoUI Media with the default World of Warcraft interface and the provided Edit Mode layouts. That said, it enhances any UI by providing additional media assets.</p>
                     <div class="mt-8 grid grid-cols-1 lg:grid-cols-2 gap-6">
                         <div class="addon-card p-6 flex flex-col">
                             <img src="https://media.forgecdn.net/avatars/thumbnails/307/986/64/64/637390259729450971.png" alt="NoobTacoUI Media Icon" class="w-12 h-12 mb-4 mx-auto">
@@ -184,14 +180,17 @@
                     </div>
                 </section>
 
+                <hr class="my-12 border-slate-300 dark:border-slate-600">
+                <p class="text-center text-amber-600 dark:text-amber-400 text-sm italic mb-8">Note: This section is not deprecated but may become so in the future.</p>
+
                 <section id="noobtacoui">
                     <h2 class="text-3xl font-bold text-slate-800 dark:text-slate-100 border-b border-slate-200 dark:border-slate-700 pb-4">NoobTacoUI</h2>
-                    <p class="mt-4 text-slate-600 dark:text-slate-300">The core ElvUI edit that brings together all the visual elements and functionality of the NoobTacoUI setup.</p>
+                    <p class="mt-4 text-slate-600 dark:text-slate-300">The core <a href="https://tukui.org/elvui" target="_blank" rel="noopener noreferrer" class="text-blue-600 dark:text-blue-400 font-semibold hover:underline">ElvUI</a> edit that brings together all the visual elements and functionality of the NoobTacoUI setup.</p>
                     <div class="mt-8 grid grid-cols-1 lg:grid-cols-2 gap-6">
                         <div class="addon-card p-6 flex flex-col">
                             <img src="https://media.forgecdn.net/avatars/thumbnails/307/985/64/64/637390255114735063.png" alt="NoobTacoUI Icon" class="w-12 h-12 mb-4 mx-auto">
                             <h3 class="text-xl font-semibold text-slate-800 dark:text-slate-100">NoobTacoUI</h3>
-                            <p class="mt-2 text-slate-600 dark:text-slate-300 flex-grow">A comprehensive ElvUI profile that provides a clean, modern interface with optimized layouts for raiding, dungeons, and general gameplay. This addon requires ElvUI as a dependency.</p>
+                            <p class="mt-2 text-slate-600 dark:text-slate-300 flex-grow">A comprehensive ElvUI profile that provides a clean, modern interface with optimized layouts for raiding, dungeons, and general gameplay. This addon requires <a href="https://tukui.org/elvui" target="_blank" rel="noopener noreferrer" class="text-blue-600 dark:text-blue-400 font-semibold hover:underline">ElvUI</a> as a dependency.</p>
                             <a href="https://www.curseforge.com/wow/addons/noobtacoui" target="_blank" rel="noopener noreferrer" class="mt-4 inline-block text-center bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors duration-200">Download ➔</a>
                         </div>
                     </div>
