--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         }
     </style>
   <script type="module" crossorigin src="/NoobTacoAddons/assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="/NoobTacoAddons/assets/footerLoader-BaBu8A0V.js"></script>
+  <script type="module" crossorigin src="/NoobTacoAddons/assets/footerLoader-ChFD2KwD.js"></script>
 </head>
 <body class="bg-slate-50 text-slate-700 dark:bg-slate-900 dark:text-slate-300 transition-colors duration-200">
 
@@ -304,7 +304,7 @@
                 </div>
 
                 <!-- NoobTacoUI -->
-                <div class="category-card coming-soon p-8 animate-slide-up">
+                <a href="noobtacoui.html" class="category-card p-8 block animate-slide-up">
                     <div class="text-center">
                         <div class="w-16 h-16 bg-indigo-100 dark:bg-indigo-900 rounded-full flex items-center justify-center mx-auto mb-4">
                             <svg class="w-8 h-8 text-indigo-600 dark:text-indigo-400" fill="currentColor" viewBox="0 0 20 20">
@@ -322,11 +322,11 @@
                             <span class="bg-gray-100 dark:bg-gray-700 text-gray-800 dark:text-gray-200 px-3 py-1 rounded-full text-sm font-medium">ElvUI</span>
                             <span class="bg-stone-100 dark:bg-stone-700 text-stone-800 dark:text-stone-200 px-3 py-1 rounded-full text-sm font-medium">Complete Package</span>
                         </div>
-                        <div class="mt-6 text-slate-400 dark:text-slate-500 font-semibold">
-                            Coming Soon...
+                        <div class="mt-6 text-blue-600 dark:text-blue-400 font-semibold">
+                            Available Now →
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
 
