--- a/pve.html
+++ b/pve.html
@@ -93,7 +93,7 @@
         }
     </style>
   <script type="module" crossorigin src="/NoobTacoAddons/assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="/NoobTacoAddons/assets/footerLoader-BaBu8A0V.js"></script>
+  <script type="module" crossorigin src="/NoobTacoAddons/assets/footerLoader-ChFD2KwD.js"></script>
 </head>
 <body class="bg-slate-50 text-slate-700 dark:bg-slate-900 dark:text-slate-300 transition-colors duration-200">
 
@@ -264,11 +264,11 @@
                         <ul class="space-y-2">
                             <li><a href="index.html" class="text-slate-400 hover:text-white transition-colors duration-200">Home</a></li>
                             <li><a href="pve.html" class="text-blue-400 hover:text-blue-300 transition-colors duration-200">PvE Content</a></li>
+                            <li><a href="noobtacoui.html" class="text-slate-400 hover:text-white transition-colors duration-200">NoobTacoUI</a></li>
                             <li><a href="https://github.com/NoobTaco/NoobTacoAddons/blob/main/CHANGELOG.md" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-white transition-colors duration-200">Changelog</a></li>
                             <li><span class="text-slate-500">UI & Quality of Life (Coming Soon)</span></li>
                             <li><span class="text-slate-500">Leveling & New Players (Coming Soon)</span></li>
                             <li><span class="text-slate-500">Professions & Economy (Coming Soon)</span></li>
-                            <li><span class="text-slate-500">NoobTacoUI (Coming Soon)</span></li>
                         </ul>
                     </div>
 
