--- a/index.html
+++ b/index.html
@@ -200,131 +200,8 @@
                 Addon Categories
             </h2>
             
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- PvE Content -->
-                <a href="pve.html" class="category-card p-8 block animate-slide-up">
-                    <div class="text-center">
-                        <div class="w-16 h-16 bg-blue-100 dark:bg-blue-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                            <svg class="w-8 h-8 text-blue-600 dark:text-blue-400" fill="currentColor" viewBox="0 0 20 20">
-                                <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
-                            </svg>
-                        </div>
-                        <h3 class="text-2xl font-semibold text-slate-800 dark:text-slate-100 mb-4">
-                            PvE Content
-                        </h3>
-                        <p class="text-slate-600 dark:text-slate-300 mb-4">
-                            Essential addons for raids, mythic dungeons, and delves. Boss mods, WeakAuras, and survival tools.
-                        </p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="bg-green-100 dark:bg-green-900 text-green-800 dark:text-green-200 px-3 py-1 rounded-full text-sm font-medium">Raids</span>
-                            <span class="bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 px-3 py-1 rounded-full text-sm font-medium">Mythic+</span>
-                            <span class="bg-purple-100 dark:bg-purple-900 text-purple-800 dark:text-purple-200 px-3 py-1 rounded-full text-sm font-medium">Delves</span>
-                        </div>
-                        <div class="mt-6 text-blue-600 dark:text-blue-400 font-semibold">
-                            Available Now →
-                        </div>
-                    </div>
-                </a>
-
-                <!-- UI & Quality of Life -->
-                <div class="category-card coming-soon p-8 animate-slide-up">
-                    <div class="text-center">
-                        <div class="w-16 h-16 bg-green-100 dark:bg-green-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                            <svg class="w-8 h-8 text-green-600 dark:text-green-400" fill="currentColor" viewBox="0 0 20 20">
-                                <path fill-rule="evenodd" d="M3 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"/>
-                            </svg>
-                        </div>
-                        <h3 class="text-2xl font-semibold text-slate-800 dark:text-slate-100 mb-4">
-                            UI & Quality of Life
-                        </h3>
-                        <p class="text-slate-600 dark:text-slate-300 mb-4">
-                            Interface improvements, inventory management, and general quality of life enhancements.
-                        </p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="bg-teal-100 dark:bg-teal-900 text-teal-800 dark:text-teal-200 px-3 py-1 rounded-full text-sm font-medium">UI Mods</span>
-                            <span class="bg-cyan-100 dark:bg-cyan-900 text-cyan-800 dark:text-cyan-200 px-3 py-1 rounded-full text-sm font-medium">Inventory</span>
-                            <span class="bg-indigo-100 dark:bg-indigo-900 text-indigo-800 dark:text-indigo-200 px-3 py-1 rounded-full text-sm font-medium">QoL</span>
-                        </div>
-                        <div class="mt-6 text-slate-400 dark:text-slate-500 font-semibold">
-                            Coming Soon...
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Leveling & New Players -->
-                <div class="category-card coming-soon p-8 animate-slide-up">
-                    <div class="text-center">
-                        <div class="w-16 h-16 bg-yellow-100 dark:bg-yellow-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                            <svg class="w-8 h-8 text-yellow-600 dark:text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                                <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
-                            </svg>
-                        </div>
-                        <h3 class="text-2xl font-semibold text-slate-800 dark:text-slate-100 mb-4">
-                            Leveling & New Players
-                        </h3>
-                        <p class="text-slate-600 dark:text-slate-300 mb-4">
-                            Perfect addons for newcomers and efficient leveling. Quest helpers and learning tools.
-                        </p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="bg-emerald-100 dark:bg-emerald-900 text-emerald-800 dark:text-emerald-200 px-3 py-1 rounded-full text-sm font-medium">Questing</span>
-                            <span class="bg-lime-100 dark:bg-lime-900 text-lime-800 dark:text-lime-200 px-3 py-1 rounded-full text-sm font-medium">Learning</span>
-                            <span class="bg-amber-100 dark:bg-amber-900 text-amber-800 dark:text-amber-200 px-3 py-1 rounded-full text-sm font-medium">Guides</span>
-                        </div>
-                        <div class="mt-6 text-slate-400 dark:text-slate-500 font-semibold">
-                            Coming Soon...
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Professions & Economy -->
-                <div class="category-card coming-soon p-8 animate-slide-up">
-                    <div class="text-center">
-                        <div class="w-16 h-16 bg-purple-100 dark:bg-purple-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                            <svg class="w-8 h-8 text-purple-600 dark:text-purple-400" fill="currentColor" viewBox="0 0 20 20">
-                                <path d="M4 4a2 2 0 00-2 2v1h16V6a2 2 0 00-2-2H4zM18 9H2v5a2 2 0 002 2h12a2 2 0 002-2V9zM4 13a1 1 0 011-1h1a1 1 0 110 2H5a1 1 0 01-1-1zm5-1a1 1 0 100 2h1a1 1 0 100-2H9z"/>
-                            </svg>
-                        </div>
-                        <h3 class="text-2xl font-semibold text-slate-800 dark:text-slate-100 mb-4">
-                            Professions & Economy
-                        </h3>
-                        <p class="text-slate-600 dark:text-slate-300 mb-4">
-                            Auction house tools, profession helpers, and gold-making addons for the savvy player.
-                        </p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="bg-violet-100 dark:bg-violet-900 text-violet-800 dark:text-violet-200 px-3 py-1 rounded-full text-sm font-medium">Auction House</span>
-                            <span class="bg-fuchsia-100 dark:bg-fuchsia-900 text-fuchsia-800 dark:text-fuchsia-200 px-3 py-1 rounded-full text-sm font-medium">Professions</span>
-                            <span class="bg-rose-100 dark:bg-rose-900 text-rose-800 dark:text-rose-200 px-3 py-1 rounded-full text-sm font-medium">Gold Making</span>
-                        </div>
-                        <div class="mt-6 text-slate-400 dark:text-slate-500 font-semibold">
-                            Coming Soon...
-                        </div>
-                    </div>
-                </div>
-
-                <!-- NoobTacoUI -->
-                <a href="noobtacoui.html" class="category-card p-8 block animate-slide-up">
-                    <div class="text-center">
-                        <div class="w-16 h-16 bg-indigo-100 dark:bg-indigo-900 rounded-full flex items-center justify-center mx-auto mb-4">
-                            <svg class="w-8 h-8 text-indigo-600 dark:text-indigo-400" fill="currentColor" viewBox="0 0 20 20">
-                                <path fill-rule="evenodd" d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z" clip-rule="evenodd"/>
-                            </svg>
-                        </div>
-                        <h3 class="text-2xl font-semibold text-slate-800 dark:text-slate-100 mb-4">
-                            NoobTacoUI
-                        </h3>
-                        <p class="text-slate-600 dark:text-slate-300 mb-4">
-                            Default WoW addon import and ElvUI versions of NoobTacoUI complete interface packages.
-                        </p>
-                        <div class="flex flex-wrap justify-center gap-2">
-                            <span class="bg-slate-100 dark:bg-slate-700 text-slate-800 dark:text-slate-200 px-3 py-1 rounded-full text-sm font-medium">Default UI</span>
-                            <span class="bg-gray-100 dark:bg-gray-700 text-gray-800 dark:text-gray-200 px-3 py-1 rounded-full text-sm font-medium">ElvUI</span>
-                            <span class="bg-stone-100 dark:bg-stone-700 text-stone-800 dark:text-stone-200 px-3 py-1 rounded-full text-sm font-medium">Complete Package</span>
-                        </div>
-                        <div class="mt-6 text-blue-600 dark:text-blue-400 font-semibold">
-                            Available Now →
-                        </div>
-                    </div>
-                </a>
+            <div id="categories-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Cards will be populated by JavaScript -->
             </div>
         </section>
 
